improved logging and code quality checks